Additional discussion of vacancy problem in relation to IPQ hypotheses & results.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -595,11 +595,11 @@ Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses 
 
 \subsection{The Igroup Presence Questionnaire}
 \label{igroup-presence-questionnaire-explanation}
-The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the perceived `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of sensory input from the RW environment. INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
+The IPQ assesses presence based upon three factors: spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the perceived `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of sensory input from the RW environment. INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
 
-For a well implemented full immersion VR experience that elicits a high sense of (virtual) presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} and \textit{``felt present''}) and INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} and \textit{``fully agree''}) would even seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence in the VR environment by hampering the sense that bodily actions are possible there.
+For a well implemented full immersion VR experience that elicits a high sense of virtual presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} and \textit{``felt present''}) and INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} and \textit{``fully agree''}) would even seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence in the VR environment by hampering the sense that bodily actions are possible there. The vacancy problem that effects this style of VR experience would be demonstrated upon IPQ results as a reduction in INV scores (greater awareness of the real environment) causing a reduction of similar magnitude in SP scores.
 
-However in a parallel reality scenario that features high spatial equivalence between its constituent RW and VR environments, this tie between SP and INV may not demonstrate. Due to the spatial equivalence between the two environments and the fact that the user's view of the virtual is of the equivalent vantage, bodily actions in the VR environment are inherently compatible with those in the RW environment - they could even be said to mimic or imitate them. Thus SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. It may even be the case that an inverse relationship presents between SP3 and INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as RW bodily actions are shared (`possible') with the VR environment.
+However in a parallel reality scenario that features high spatial equivalence between its constituent RW and VR environments, this tie between SP and INV may not demonstrate. Due to the spatial equivalence between the two environments and the fact that the user's view of the virtual is of the equivalent vantage, bodily actions in the VR environment are inherently compatible with those in the RW environment - they could even be said to mimic or imitate them. Thus SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. It may even be the case that an inverse relationship presents between SP3 and INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as RW bodily actions are shared (`possible') with the VR environment. This expected discrepancy between INV and SP scores for a parallel reality scenario will demonstrate the ability of the concept to mitigate the vacancy problem that effects full immersion VR experiences where the scores remain more closely tied. In fact it would not be an inductive leap to interpret the magnitude of this discrepancy between INV and SP scores as a direct indication of how well the platform managed to mitigate the vacancy problem.
 
 A conservative expectation for the results of the IPQ when applied to a parallel reality scenario would be for generally lower INV scores than for a full immersion VR scenario but without drastic reduction in SP scores. An optimistic expectation for a well implemented parallel reality scenario would be for lower INV scores and \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment lead to an increase in experienced spatial presence in the VR environment.
 
@@ -1145,7 +1145,7 @@ seated & 4.5 & 1.472 & 4 & 1.673 \\
 
 The seated VR scenario produced baseline IPQ results for a seated, full immersion HMD based VR experience in which RW stimuli are intentionally suppressed from the user. SP and INV results for this scenario were relatively high, while the REAL results were low. This does not come as much of a surprise, as the graphical quality of the VR chapel reconstruction used throughout the user studies was not stellar, partly as a result of having to intentionally reduce the level of detail in order to maintain acceptable framerates throughout the evaluations. It should come as no surprise then that even though participants perceived bodily actions to be possible within the VR environment (high SP) and found incompatible RW stimuli well suppressed (high INV) that the realness of the VR environment was nonetheless lacking (low REAL). As one participant said during their interview, it felt real even though it didn't look it - \textit{``\ldots obviously it wasn't the same quality, but I still felt so immersed in it. Even though part of me would've known it wasn't real, most of it felt real even though it didn't look like it''}.
 
-In both parallel reality scenarios SP and REAL were reduced equally by a small amount, whilst INV was reduced more substantially and with a greater reduction for scenario 1-4 than for scenario 1-3. This met the hypothesis that a positively received parallel reality experience would result in noticeably reduced INV but without substantial reduction in SP and REAL. The reduced INV indicates that participants were more aware of RW stimuli, but the only marginally reduced SP indicates that their sense of presence in the VR environment did not drastically suffer because of this. Furthermore the marginal reduction in REAL indicates that the perceived realness of the VR environment did not substantially suffer from tandem observation with the equivalent vantage points into the (necessarily real) RW environment. However the parallel reality experience was evidently not received positively enough to elicit heightened overall SP results as was hypothesized might happen.
+In both parallel reality scenarios SP and REAL were reduced equally by a small amount, whilst INV was reduced more substantially and with a greater reduction for scenario 1-4 than for scenario 1-3. This met the hypothesis that a positively received parallel reality experience would result in noticeably reduced INV but without substantial reduction in SP and REAL. The reduced INV indicates that participants were more aware of RW stimuli, but the only marginally reduced SP indicates that their sense of presence in the VR environment did not drastically suffer because of this, indicating a mitigation of the vacancy problem. Furthermore the marginal reduction in REAL indicates that the perceived realness of the VR environment did not substantially suffer from tandem observation with the equivalent vantage points into the (necessarily real) RW environment. However the parallel reality experience was evidently not received positively enough to elicit heightened overall SP results as was hypothesized might happen.
 
 Looking specifically at the results for SP3 and INV2 (table \ref{sp3-inv2-2-1-table}) they seem to be tied together as per Constantin's observation (see section \ref{igroup-presence-questionnaire-explanation}) for the seated VR scenario and scenario 1-3 where they fall equally. However in scenario 1-4, INV2 drops substantially more than SP3 which climbs to above its level in scenario 1-3. This lends support to the notion that in a parallel reality experience in which the user is encouraged (or \textit{forced} as was the case in scenario 1-4 with the automatic switches) to view visual stimuli from two compatible environments that SP can be maintained, that the break in presence associated with a transition from one environment to the other is not so great as to effect a Gestalt switch and throw off perceptual/concrete processing to an extent that sense of presence (in terms of focus of attention) is drastically reduced.
 
@@ -1407,7 +1407,7 @@ When considering the IPQ results for stage 2.2 participants the seated VR scenar
 
 SP was reduced in the 75/25 scenario to a level slightly lower than that in both parallel reality scenarios in stage 2.1, while in the 50/50 scenario there was a marked increase in SP to a level (4.7) above any other scenario in either stage, including the seated VR scenarios. This hints toward the optimistic expectation of a good parallel reality experience resulting in reduced INV but increased SP compared to a seated VR scenario, by representation of bodily actions within the RW environment leading to an increase in experienced spatial presence within the (spatially equivalent) VR environment.
 
-INV was reduced in the 75/25 scenario and further reduced in the 50/50 scenario, as was to be expected. Interestingly however, the INV results for both parallel reality scenarios in stage 2.2 were notably higher than those for the parallel reality scenarios of stage 2.1, a discrepancy that is not contained within the higher INV for the traditional VR scenario in stage 2.2 compared to stage 2.1.
+INV was reduced in the 75/25 scenario and further reduced in the 50/50 scenario, as was to be expected. Interestingly however, the INV results for both parallel reality scenarios in stage 2.2 were notably higher than those for the parallel reality scenarios of stage 2.1, a discrepancy that is not contained within the higher INV for the traditional VR scenario in stage 2.2 compared to stage 2.1. When considering the difference between SP and INV for each scenario in stage 2.2, the further reduced INV value for the 50/50 scenario combined with its increased SP value indicates that in terms of the vacancy problem, the 50/50 scenario achieved a larger mitigation than the 75/25 scenario.
 
 REAL was reduced in the 75/25 scenario to almost exactly the same level as both parallel reality scenarios in stage 2.1, however for the 50/50 scenario REAL was only reduced a miniscule amount (a reduction of 0.118 from 2.563 to 2.438). This implies that the increased visibility of the VR environment when perceiving the RW environment helped to enhance the perceived realness of the VR environment, possibly by mitigating the somewhat rudimentary visual quality of the virtual model by making complimentary and supporting aspects of the RW environment more prominent.
 
@@ -1549,7 +1549,7 @@ Performance of IndoorAtlas was similarly high throughout both the 75/25 scenario
 
 This stage of the evaluation investigated the effects of changing the default view of a parallel reality scenario to one that always includes some aspect of the VR environment, such that the user is at all times receiving some degree of VR stimuli even when they do not consciously trigger a transition into a non-default view. Changing the default view in this manner presents VR visuals in a non consciously triggered manner in a less disruptive and break in presence causing mannere than the automated transition (transition 4) employed in the second of the stage 2.1 parallel reality scenarios. This investigation thus addressed the second fundamental aspect of transitions performed between the constituent real and virtual environments of a parallel reality platform that were expected to have loading upon the severity of breaks in presence (see section \ref{design-considerations-for-rw-vr-transitions}).
 
-Comparing the parallel reality scenarios from this stage of the evaluation to the second parallel reality scenario from the stage 2.1 evaluation in which transition 4 was used, the IPQ results indicate that the 75/25 scenario reduced SP and REAL to similar levels however the 50/50 scenario resulted in an almost imperceptible decrease in REAL and a noticeable \textit{increase} in SP, while the results for the seated VR scenario closely matched those from the stage 2.1 evaluation.
+Comparing the parallel reality scenarios from this stage of the evaluation to the second parallel reality scenario from the stage 2.1 evaluation in which transition 4 was used, the IPQ results indicate that the 75/25 scenario reduced SP and REAL to similar levels however the 50/50 scenario resulted in an almost imperceptible decrease in REAL and a noticeable \textit{increase} in SP, while the results for the seated VR scenario closely matched those from the stage 2.1 evaluation. However despite the constant presence of VR visuals throughout both 75/25 and 50/50 scenarios, INV was not reduced as much as in the parallel reality scenarios from stage 2.1.
 
 Despite these results and the fact that the 50/50 scenario was reported as allowing easier comparison between the two environments, it was considered less rewarding and was preferred less overall compared to the 75/25 scenario. In some ways this mimics the relationship between the first stage 2.1 parallel reality scenario and the second stage 2.1 parallel reality scenario, where although the second led to better understanding of the two environments it did so at the cost of overall comfort and enjoyment.
 
