Intro & Conclusions tweaks.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -59,17 +59,17 @@ The advent and mass adoption of the smartphone beginning in the early 2000s, wit
 
 The early 2000s also saw the rise of a next generation of persistent multi-user virtual environments, self proclaimed `virtual worlds', with a focus on 3D3C (3D, Community, Creation and Commerce)~\cite{Sevan2008}, including Second Life\footnote{\url{http://secondlife.com/}} from Linden Lab and its open source implementation OpenSim\footnote{\url{http://opensimulator.org/}}. The scientific research potential of these virtual worlds~\cite{Bainbridge2007} led to numerous projects that explored their utility for subjects as diverse as education~\cite{Allison2012}, virtual heritage~\cite{Kennedy2013}, building automation systems\footnote{\url{http://www.ugotrade.com/2007/07/02/eolus-makes-leap-to-3d-internet-on-second-life/}}, data centre visualisation\footnote{\url{http://www-03.ibm.com/press/us/en/pressrelease/23565.wss}} and standards design~\cite{Gelissen2011a}, amongst others.
 
-One such project, led by Joshua Lifton at MIT's Media Lab, introduced \textit{cross reality} as a new category of alternate reality in which the real world and a virtual environment (in this case provided by Second Life) were connected by sensor and actuator infrastructure, allowing bidirectional exchange of media and control information between the two environments, such that actions and events in one could manifest in the other~\cite{Lifton2007a}. This endeavour aimed to mitigate what Lifton identified as the \textit{vacancy problem}, which described how a person interacting with a virtual environment becomes unaware of their real environment and vice versa, by virtue of not having \textit{``the means to be in more than one place (reality) at a time''}.
+One such project, led by Joshua Lifton at MIT's Media Lab, introduced \textit{cross reality} as a new category of alternate reality in which the real world and a virtual environment (in this case provided by Second Life) were connected by sensor and actuator infrastructure, allowing bidirectional exchange of media and control information between the two environments, such that actions and events in one could manifest in the other~\cite{Lifton2007a}. This endeavour aimed to mitigate what Lifton identified as the \textit{vacancy problem}, which describes how a person interacting with a virtual environment becomes unaware of their real environment and vice versa, by virtue of not having \textit{``the means to be in more than one place (reality) at a time''}.
 
 The vacancy problem remains an important consideration as we move rapidly into a world where the ubiquity of technology, wireless communications and the explosive popularity of social networking services (SNS) heralds the coming of an era in which maintaining a virtual presence (whether 3D or on Facebook) while continuing to function in the real world becomes not just desirable, but the norm, creating instances of \textit{polysocial reality}~\cite{Applin2012} wherever we go.
 
-It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real and a virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they may be, gives rise to parallel reality. With the recent resurgence of interest in HMD based virtual reality, thanks largely to the introduction by Oculus\footnote{\url{https://www.oculus.com/}} of their Rift developer kits that leverage advances in display technology to overcome the shortfalls of the 90s virtual reality fad, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas\footnote{\url{https://www.indooratlas.com/}}, the \textit{Mirrorshades} parallel reality platform was developed and evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors and actuators, parallel reality grants them the ability to switch between direct visual engagement with each environment - to at one moment view their real surroundings and at the next to view the equivalent vantage in the immersive parallel virtual environment.
+It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real and virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they may be, gives rise to parallel reality. With the recent resurgence of interest in HMD based virtual reality, thanks largely to the introduction by Oculus\footnote{\url{https://www.oculus.com/}} of their Rift developer kits that leverage advances in display technology to overcome the shortfalls of the 90s virtual reality fad, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas\footnote{\url{https://www.indooratlas.com/}}, the \textit{Mirrorshades} parallel reality platform was developed and evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors and actuators, parallel reality grants them the ability to switch between direct visual engagement with each environment - to at one moment view their real surroundings and at the next to view the equivalent vantage in the immersive parallel virtual environment.
 
 %=========================================================================================================
 
 \section{Objectives and Methodology}
 
-The design and development of a new category of alternate reality requires thorough theoretical comprehension and understanding of existing categories of alternate realities. However to ascertain the worth of a new alternate reality it is all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base an assessment upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality requires that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
+The design and development of a new category of alternate reality required thorough theoretical comprehension and understanding of existing categories of alternate reality. However to ascertain the worth of a new alternate reality it was all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be anything to base evaluation upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality required that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
 
 \begin{quote}
 	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
@@ -77,9 +77,9 @@ The design and development of a new category of alternate reality requires thoro
 
 %Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
 
-The approach taken by this body of research was first to develop a well defined set of definitions for different categories of existing alternate reality, in order to correctly situate the new paradigm of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by their investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the parallel reality paradigm.
+The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
 
-The \textit{worth} of the parallel reality paradigm, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
+The \textit{worth} of the parallel reality concept, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
 
 Initially the Virtual Time Window platform, discussed in chapter \ref{chapter-vtw}, was developed in order to explore the potential suitability of an existing alternate reality modality of interaction to serve as a platform for investigation into parallel reality experience. After the experiential aspect of the Virtual Time Window did not fully meet with the vision of the parallel reality concept, the Mirrorshades platform, discussed in chapter \ref{chapter-mirrorshades}, was developed in order to fully realise the ideals of the paradigm via a new modality of alternate reality interaction.
 
@@ -87,7 +87,7 @@ Initially the Virtual Time Window platform, discussed in chapter \ref{chapter-vt
 %and that parallel reality allows exploration of the same content, for the same goal, but in a different manner
 The measure of success for the Mirrorshades platform as an instantiation of the parallel reality concept was based upon comparison to a previously established category of alternate reality, by comparing Mirrorshades against a seated virtual reality experience within a virtual heritage scenario. This evaluation is covered by chapter \ref{chapter-eval-1}.
 
-With success of the platform strongly indicated by this first user study, two further user studies were undertaken in order to shed light upon how different aspects of the implementation of a parallel reality platform either negatively or positively affected the user experience. These studies, discussed in chapter \ref{chapter-eval-2}, allowed for the construction of a set of best practice recommendations for future parallel reality endeavours.
+With success of the platform, and the parallel reality concept more generally, strongly indicated by this first user study, two further user studies were undertaken in order to shed light upon how different aspects of the implementation of a parallel reality platform either negatively or positively affected the user experience. These studies, discussed in chapter \ref{chapter-eval-2}, allowed for the construction of a set of best practice recommendations for future parallel reality endeavours.
 
 %=====================
 
@@ -96,12 +96,12 @@ In summary the fundamental research objectives addressed by this thesis were to:
 \begin{enumerate}
 	\item Introduce the parallel reality concept by situating it within the larger ecosystem of existing categories of alternate reality, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks, performing updates, modifications and extensions where required.
 	
-	\item Develop a suitable model for the illustration of experience in parallel reality scenarios, allowing not only for comparison and contrast between parallel reality and other alternate reality experiences, but also for illustration of different implementations of a parallel reality experience.
+	\item Develop a suitable model for the illustration of experience in parallel reality scenarios, allowing not only for comparison and contrast between parallel reality and other alternate reality experiences, but also for illustration of different implementations of parallel reality experience.
 	
-	\item Develop a parallel reality system suitable for deployment to real world user studies to effect comparison against previous categories of alternate reality that may be employed in the same scenario.
+	\item Develop a parallel reality system suitable for deployment to real world user studies to effect comparison against previous categories of alternate reality.
 	
 	%scenario isn't really the word we want - task?
-	\item Identify and put into practice suitable assessment techniques to ascertain the worth of parallel reality in relation to previous alternate reality experience in the same scenario.
+	\item Identify and put into practice suitable assessment techniques to ascertain the worth of parallel reality in relation to previous alternate reality experience.
 	
 	\item Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects, putting these into practice within real world user studies.
 	
@@ -115,7 +115,7 @@ While the work presented in this thesis was undertaken principally by myself, it
 
 %=====================
 
-Co-authored peer reviewed papers that cover the process of creation and utilisation of the cathedral and chapel reconstructions include:
+Co-authored peer reviewed papers that cover the process of creation and utilisation of the cathedral and chapel reconstructions used in chapters \ref{chapter-vtw}, \ref{chapter-mirrorshades}, \ref{chapter-eval-1} and \ref{chapter-eval-2} include:
 
 \begin{itemize}
 
@@ -188,7 +188,7 @@ The contributions of this thesis can be summarized as follows:
 	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish between alternate reality terminologies.
 	\item The presentation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
-	\item Development of a second parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
+	\item Development of a second parallel reality platform, dubbed Mirrorshades, that uses the Unity game engine to combine new virtual reality hardware with novel indoor positioning technology.
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience.
 	\item Creation and discussion of a set of best practices for future parallel reality endeavours.
 \end{itemize}
@@ -197,9 +197,9 @@ The contributions of this thesis can be summarized as follows:
 
 \section{Document Overview}
 
-Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the investigation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different manners of parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
+Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-background} also introduces the combined Milgram/Waterworth model for illustrating parallel reality experience. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the investigation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different approaches to parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
 
-Table \ref{objectives} provides an overview of the sections of the thesis in which each objective is addressed, along with relevant publications from section \ref{collaborations-and-publications}.
+Table \ref{objectives} provides an overview of the sections of the thesis in which each objective is addressed, along with relevant publications listed in section \ref{collaborations-and-publications}.
 
 \vspace{5mm}
 
