--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1167,7 +1167,7 @@ Framerates throughout the stage 2.1 investigation (see figure \ref{framerates_2-
 
 \subsection{IndoorAtlas Performance}
 
-Performance of IndoorAtlas throughout both scenario 1-3 (figure \ref{2-1-positiondeltas1-3.png}) and scenario 1-4 (figure \ref{2-1-positiondeltas1-4.png}) was once again good, with the vast majority of movements being of a small scale and with the medians for all participants approaching 0 metres indicating that once IndoorAtlas reliably identified stationary participants. Large jarring virtual movements were uncommon, however participants noted that when such a movement or inaccuracy coincided with an automatic transition the effect was unpleasant.
+Performance of IndoorAtlas throughout both scenario 1-3 (figure \ref{2-1-positiondeltas1-3.png}) and scenario 1-4 (figure \ref{2-1-positiondeltas1-4.png}) was once again good, with the vast majority of movements being of a small scale and with the medians for all participants approaching 0 metres indicating that IndoorAtlas reliably identified stationary participants. Large jarring virtual movements were uncommon, however participants noted that when such a movement or inaccuracy coincided with an automatic transition the effect was unpleasant.
 
 \TwoFig{2.1/2-1-positiondeltas1-3.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-3.}{2-1-positiondeltas1-3.png}
        {2.1/2-1-positiondeltas1-4.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-4.}{2-1-positiondeltas1-4.png}
@@ -1177,7 +1177,7 @@ Plots of position data upon the floorplan of the chapel illustrate how these occ
 \TwoFig{splodge-maps/10-13map.png}{Position data during scenario 1-3 for participant 8.}{10-13map.png}
        {splodge-maps/10-14map.png}{Position data during scenario 1-4 for participant 8.}{10-14map.png}
 
-Where inaccuracies such as these are unavoidable in a parallel reality system, the negative effects that the resulting large movements pose should be minimised. Prudent approaches would be to specify a certain threshold for discrete movements, above which the user is either prevented from viewing virtual stimuli or for which the stimuli are blurred, dimmed or similarly obscured (along with a message/dialogue explaining the situation). Similar checks to prevent or mitigate the effect of the virtual vantage moving through virtual obstructions, even were the total movement is beneath the threshold value, would also be prudent.
+Where inaccuracies such as these are unavoidable in a parallel reality system, the negative effects that the resulting large movements pose should be minimised. Prudent approaches would be to specify a certain threshold for discrete movements, above which the user is either prevented from viewing virtual stimuli or for which the stimuli are blurred, dimmed or similarly obscured (along with a message/dialogue explaining the situation). Similar checks to prevent or mitigate the effect of the virtual vantage moving through virtual obstructions, even where the total movement is beneath the threshold value, would also be prudent.
 
 %=========================================================================================================
 
